--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.platelkevin.newstream.newsstream"
+        applicationId "com.platelkevin.newsstream.newsstream"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
